Hide sidebar by default when on mobile Fix some overflows with some titles and codesnippets

--- a/docs/.style/fsdocs-custom.sass
+++ b/docs/.style/fsdocs-custom.sass
@@ -42,6 +42,9 @@ $font-family-sans-serif: 'Poppins', sans-serif
   box-shadow: 0 4px 10px $drop-shadow
   table.pre
     background-color: $pearl
+    display: block
+    overflow: auto
+    width: 100%
     pre
       background-color: $pearl
       color: $primary
@@ -49,6 +52,7 @@ $font-family-sans-serif: 'Poppins', sans-serif
     a
       color: $black
       text-decoration: none
+      overflow-wrap: anywhere
 
     &:hover, &:focus
       color: $black
